[workspace]

members = [
    "2023/day1",
    "2023/day2",
    "2023/day3",
    "2023/day4",
    "2023/day5",
    "2023/day6",
    "2023/day7",
    "2023/day8",
    "2023/day9",
    "2023/day10",
    "2023/day11",
    "2023/day12",
    "2023/day13",
    "2023/day14",
    "2023/day15",
    "2023/day16",
    "2023/day17",
]